<resources>
    <string name="app_name">Silent Words</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="todo">TODO</string>
    <string name="love">Love ❣    </string>
    <string name="one_sided">One-Sided 🤍    </string>
    <string name="heart_broken">Heart-Broken 💔   </string>
    <string name="go_back">Go back</string>
    <string name="n">1. मोहब्बत से मोहब्बत तब हुई,\n    जब मोहब्बत तुमसे हुई…! ❣️🌹 </string>
    <string name="_2_n">2. दूर रहकर भी तुम्हारी हर खबर रखते हैं,\n    हम पास तुम्हे कुछ इस कदर रखते हैं…❣️🌹</string>
    <string name="_3_n">3. कुछ तो जादू है तेरे नाम में,\n    नाम सुनते ही चेहरे पर मुस्कान आ जाती\n    है…❣️🌹</string>
    <string name="_4_n">4. लफ्ज़ कम हैं पर बहोत प्यारे हैं,\n     तुम हमारे हो हम तुम्हारे हैं… ❣️🌹</string>
    <string name="_5_n">5. सामने बैठे रहो दिल को करार आयेगा\n    जितना देखेंगे तुम्हे उतना ही प्यार \n    आयेगा। ❣️🌹</string>
    <string name="_6_n">6. कभी पढ़ो तो सही मेरी आंखों को,\n    यहां दरिया बहता है तेरी मोहब्बत का। 🌹❣️</string>
    <string name="_7_n">7. ये मेरा इश्क औरों जैसा नहीं,\n    अकेले रहेंगे पर तेरे ही रहेंगे.! ❣️🌹</string>
    <string name="_8_n_n_n">8. सौ बार तलाश किया हमने,\n    खुद को खुद में…\n    एक तेरे सिवा,कुछ नही\n    मिला मुझको, मुझ में..🌹</string>
    <string name="_9_n">9. किसी को चाहो तो ऐसे चाहो की,\n    किसी और को चाहने की चाहत ही ना रहे…\n   🌹❣️</string>
    <string name="_10_n">10. कोई अजनबी खास हो रहा है,\n      लगता है फिर प्यार हो रहा है… 🌹❣️</string>
    <string name="_11_n">11. पता नहीं कितना प्यार हो गया हैं तुमसे\n      नाराज़ होने पर भी तुम्हारा ही याद आता हैं!</string>
    <string name="_12_n">12. प्यार करो तो कोई एक से करो\n       जिस से भी करो कोई नेक से करो।</string>
    <string name="_14_n">14. बहुत खूबसूरत वो रातें होती है\n      जब तुम से दिल की बाते होती है।</string>
    <string name="_13_n">13. कुछ अधूरापन था जो पूरा हुआ है\n      कोई था मेरा जो मेरा हुआ हैं।</string>
    <string name="_15_n">15. तुझको जितना भी मैंने भुलाया,\n       उतना ही ख्याल तेरा आया!</string>
    <string name="go_back1">Go back</string>
    <string name="_1_n_n_n">1. मोहब्बत के सफर में….\n बस यही होता है …\n तुम उसके ,और वो ..\n किसी और का होता है ..</string>
    <string name="_2_n_n">2. हमने भी बहुत दिल ठुकराए थे,\n लेकिन उसे क्या मालूम,\n हम उस पर दिल हारे थे।</string>
    <string name="_3_n1">3. वो जिंदगी ही क्या जिसमे प्यार ना हो और\n वह मोहब्बत ही क्या जो एक तरफा ना हो।</string>
    <string name="_4_n1">4. सब तुझे चाहते है,\n पर में तेरी खुशी चाहता हूँ ..</string>
    <string name="_5_n1">5. मोहब्बत नहीं थी तो एक बार समझाया तो होता,\n बेचारा दिल तुम्हारी खामोशी को इश्क समझ बैठा है।</string>
    <string name="_6_n1">6. हर एक सच्चा प्यार एक तरफा नहीं होता,\n पर एक तरफा प्यार हमेशा सच्चा होता है</string>
    <string name="_7_n1">7. दुख तो है कि तू नहीं है,\n पर खुशी भी है कि तू खुश है।</string>
    <string name="_8_n_n1">8. दिल पर तू जुबां पर तेरा नाम है,\n फिर भी तू मेरा क्यूँ नहीं है,\n इसी बात से मैं परेशान हूँ ! !</string>
    <string name="_9_n_n1">9. मोहब्बत तकदीर से मिलती है जाना,\n अगर चाहने से कोई किसी का हो जाता,\n तो सुनो- ‘तुम सिर्फ मेरे हो’।</string>
    <string name="_10_n1">10. पता नहीं कैसा गिरे इस इश्क के समुंदर में\n चाह कर भी तैर नहीं पाते..</string>
    <string name="_11_n1">11. बेवक्त बेवजह बेसबब सी बेरुखी तेरी,\n फिर भी बेइंतहा तुझे चाहने की बेबसी मेरी।</string>
    <string name="_12_n_n1">12. बहुत लोग थे उन्हें चाहने वाले,\n और ये देख कर,\n हमने अपनी चाहत अपने ही पास रख ली ! !</string>
    <string name="_13_n1">13. उनके हाथों में अजनबी गुलाब देखकर,\n मेरे दिल में कुछ चुभ रहा था कॉंटे जैसा !</string>
    <string name="_14_n1">14. तुम्हे देखकर कुछ बोल नही पाता हूं\n तुझे देखे बिना मैं चैन से रह नही पाता हूं..</string>
    <string name="_15_n1">15. ये इक तरफ़ा प्यार भी अजीब है\n जो रोने से पहले सोने नहीं देती ..</string>
    <string name="_1_n2">1. जरा सी चोट से शीशे की तरह टूट गया,\n दिल तो कमबख्त मेरा मुझसे भी बुजदिल निकला।</string>
    <string name="_2_n2">2. यकीन मानो ये मोहब्बत इतनी भी आसान नहीं,\n हजारों दिल टूट जाते हैं एक दिल की हिफाज़त में</string>
    <string name="_3_n2">3. टूट सा गया है मेरी चाहतों का वजूद,\n अब कोई अच्छा भी लगे तो हम इजहार नहीं करते</string>
    <string name="_4_n2">4. क्यूँ न सज़ा मिलती हमें मोहब्बत में,\n आखिर हम ने भी तो बहुत दिल तोड़े तेरी खातिर</string>
    <string name="_5_n2">5. दिलों का खेल जो खेलो तो ये भूल मत जाना,\n कि खेल-खेल में अक्सर खिलौने टूट जाते हैं</string>
    <string name="_6_n2">6. टूट सा गया है मेरी चाहतों का वजूद,\n अब कोई अच्छा भी लगे तो इज़हार नहीं करते</string>
    <string name="_7_n2">7. जरा सा बात करने का तरीका सीख लो तुम भी,\n उधर तुम बात करते हो इधर दिल टूट जाता है</string>
    <string name="_8_n2">8. फिर नहीं बसते वो दिल जो एक बार टूट जाते हैं,\n कब्र कितनी ही संवारो कोई ज़िंदा नहीं होता</string>
    <string name="_9_n2">9. मैं तो आईना हूँ टूटना मेरी फितरत है,\n इसलिए पत्थरों से मुझे कोई गिला नहीं</string>
    <string name="_10_n2">10. कोई एहसान करदे मुझपे इतना सा बता कर,\n भुलाया कैसे जाता है दिल तोड़ने वाले को</string>
    <string name="_11_n2">11. तुझसे बहुत कहा था कि मुझे अपना न बना,\n अब दिल मेरा तोड़ कर मेरा तमाशा न बना</string>
    <string name="_12_n2">12. जब लिख ही दिया है तूने मेरा नाम रेत पर,\n मिटने का फिर मेरे तू तमाशा भी देख ले</string>
    <string name="_13_n2">13. दिल जो टूटा तो कई हाथ दुआ को उठे,\n ऐसे माहौल में अब किसको पराया समझें</string>
    <string name="_14_n2">14. किसी का कत्ल करने पर सजा-ए-मौत है लेकिन,\n सजा क्या हो अगर दिल कोई किसी का तोड़ दे</string>
    <string name="_15_n2">15. मिटा दो नाम तक मेरा किताब-ए-ज़िन्दगी से तुम,\n मगर पल-पल रुलाएगी-सताएगी कमी मेरी</string>
</resources>